# raccoon-editor

./: .codecov.yml  .travis.yml  Cargo.toml  README.md  log
.github/: checkstyle.yml  testaction.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checkstyle.yml  test.yml  workflow.yml
src/: lib.rs  main.rs
src/model/: app.rs  buffer.rs  cursor.rs  mod.rs  nodelist.rs  taggedtext.rs  texttag.rs
src/model/tests/: app_tests.rs  buffer_tests.rs  gapbuffer_tests.rs  nodelist_tests.rs
src/utils/: cursor.rs  events.rs  gapbuffer.rs  mod.rs
src/utils/tests/: gapbuffer_tests.rs
src/view/: mod.rs
