[package]
name = "raccoon-editor"
version = "0.1.0"
authors = ["Eldon Chung <eldon.chung.yr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9"
termion = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1.0"
